# brian2wasm

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  index.html  pyproject.toml  rtd-requirements.txt
.github/workflows/: deploy.yml  publish.yml  test-pr.yml
brian2wasm/: __init__.py  __main__.py  device.py  emsdk_setup.bat  emsdk_setup.sh  functions.py  index_template.html
brian2wasm/templates/: brian.js  brian_library.js  html_template  main.html  makefile  objects.cpp  pre.js  win_makefile  worker.js
brunel_hakim1999/: index.html  wasm_module.wasm
brunel_hakim1999_change_params/: wasm_module.js  wasm_module.wasm
brunel_hakim1999_realtime/: index.html  wasm_module.js  wasm_module.wasm
brunel_hakim1999_style/: wasm_module.js
docs/: conf.py  index.rst  release_notes.rst
docs/developer/: compilation.rst  core.rst  index.rst  runtime.rst  wasm.rst
docs/examples/: IF_curve_LIF.rst  brunel_hakim.rst  brunel_hakim_change_params.rst  index.rst  non_reliabilty.rst  ornstein_uhlenbeck.rst
docs/reference/: brian2wasm.__main__.rst  brian2wasm.device.rst  brian2wasm.functions.rst  brian2wasm.rst  modules.rst
docs/user/: deploy.rst  html.rst  index.rst  installation.rst  issues.rst  publish.rst  usage.rst
examples/: IF_curve_LIF.html  IF_curve_LIF.py  Wang_Buszaki_1996.html  Wang_Buszaki_1996.py  brunel_hakim1999.html  brunel_hakim1999.py  brunel_hakim1999_change_params.html  brunel_hakim1999_change_params.py  brunel_hakim1999_realtimeplot.html  brunel_hakim1999_realtimeplot.py  brunel_hakim1999_style.html  brunel_hakim1999_style.py  non_reliability.html  non_reliability.py  ornstein_uhlenbeck.html  ornstein_uhlenbeck.py
recipe/: activate.bat  activate.sh  bld.bat  build.sh  deactivate.bat  deactivate.sh  emsdk  meta.yaml  post-link.sh
