[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "brian2wasm"
dynamic = ["version", "readme"]
description = "A WebAssembly backend for the Brian 2 simulator"
keywords = ["wasm", "brian"]
requires-python = ">=3.10"

[project.scripts]
brian2wasm = "brian2wasm.__main__:main"

[project.urls]
Homepage = "https://github.com/brian-team/brian2wasm"
Source = "https://github.com/brian-team/brian2wasm"
Tracker = "https://github.com/brian-team/brian2wasm/issues"

[tool.setuptools.package-data]
brian2wasm = ["emsdk_setup.sh", "emsdk_setup.bat"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["brian2wasm*"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "brian2wasm/_version.py"
fallback_version = "unknown"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10"
emsdk = "*"        

[tool.pixi.pypi-dependencies]
brian2wasm = { git = "https://github.com/PalashChitnavis/brian2wasm", rev = "pixi" }
brian2 = "==2.9.0"         

[tool.pixi.tasks]
setup = "emsdk install latest && emsdk activate latest"

[tool.pixi.target.unix.activation]
scripts = ["./brian2wasm/emsdk_setup.sh"]

[tool.pixi.target.win.activation]
scripts = ["./brian2wasm/emsdk_setup.bat"]
