[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brian2wasm"
version = "0.0.1"
description = "A WebAssembly backend for the Brian 2 simulator"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["wasm", "brian"]
dependencies = [
    "brian2==2.9.0",
    "setuptools",
]

[project.scripts]
brian2wasm = "brian2wasm.__main__:main"

